--- a/ryze-ui-generator/package.json
+++ b/ryze-ui-generator/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.32.1",
+    "@babel/standalone": "^7.29.1",
     "lucide-react": "^0.460.0",
     "next": "^16.1.6",
     "react": "^18.3.0",
